--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon_1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -42,11 +44,15 @@
         <img src="assets/img/profile-hg_1.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Harsh Gheenaiya</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.snapchat.com/add/itsharshu_2022?share_id=3O2XoBJgFXw&locale=en-US" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/profile.php?id=100076954980252&mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/its_harshu_official_056?igshid=OGQ2MjdiOTE=" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.snapchat.com/add/itsharshu_2022?share_id=3O2XoBJgFXw&locale=en-US" class="twitter"><i
+              class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100076954980252&mibextid=ZbWKwL" class="facebook"><i
+              class="bx bxl-facebook"></i></a>
+          <a href="https://instagram.com/its_harshu_official_056?igshid=OGQ2MjdiOTE=" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
           <a href="https://join.skype.com/invite/wntfwceq3HFU" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/harsh-gheenaiya-931048216" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/harsh-gheenaiya-931048216" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -79,7 +85,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Harsh Gheenaiya and I am a skilled Web designer and Graphic Designer and i presenting unique projects. I work both with businesses and individuals, and always Find always New tasks.</p>
+          <p>My name is Harsh Gheenaiya and I am a skilled Web designer and Graphic Designer and i presenting unique
+            projects. I work both with businesses and individuals, and always Find always New tasks.</p>
         </div>
 
         <div class="row">
@@ -89,7 +96,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Graphic Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              I work with commercial projects of any scale and with private requests. I use the latest tools and creative approaches that help solve a specific business or personal issue.
+              I work with commercial projects of any scale and with private requests. I use the latest tools and
+              creative approaches that help solve a specific business or personal issue.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -104,14 +112,17 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA (Bachelor)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>harshgheenaiya43@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                    <span>hgcreation056@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
+              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
+              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
             </p>
           </div>
         </div>
@@ -125,7 +136,9 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row no-gutters">
@@ -133,7 +146,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="26" data-purecounter-duration="1"
+                class="purecounter"></span>
               <p><strong>Happy Clients</strong> </p>
             </div>
           </div>
@@ -141,7 +155,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="176" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="176" data-purecounter-duration="1"
+                class="purecounter"></span>
               <p><strong>Projects</strong> </p>
             </div>
           </div>
@@ -149,7 +164,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4795" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4795" data-purecounter-duration="1"
+                class="purecounter"></span>
               <p><strong>Hours Of Support</strong> </p>
             </div>
           </div>
@@ -157,7 +173,8 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="136" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="136" data-purecounter-duration="1"
+                class="purecounter"></span>
               <p><strong>Hours Of Hard Working</strong> rerum asperiores dolor</p>
             </div>
           </div>
@@ -173,7 +190,9 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row skills-content">
@@ -183,21 +202,24 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">CSS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val">15%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -209,22 +231,25 @@
             <div class="progress">
               <span class="skill">WordPress <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
-            
+
             <div class="progress">
               <span class="skill">Graphic Design <i class="val">99%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">2D Animation<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
           </div>
@@ -240,7 +265,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+            in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -248,7 +275,9 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Harsh Gheenaiya</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
+                  developing user-centered digital/print marketing material from initial concept to final, polished
+                  deliverable.</em></p>
               <ul>
                 <li>56, Harikunj Society, Chikuwadi, Nana varachha Road, Surat-395006</li>
                 <li>+91 96385 16334</li>
@@ -261,13 +290,16 @@
               <h4>S.S.C &amp; Board</h4>
               <h5>2018 - 2019</h5>
               <p><em>Ashadeep Grup Of Schools</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
+                ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
               <h4>H.S.C &amp; Board</h4>
               <h5>2020 - 2021</h5>
               <p><em>Ashadeep Grup Of Schools</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
+                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
+                dila</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -277,18 +309,22 @@
               <h5>2021 - 2022</h5>
               <p><em><a href="https://parsolution.net">Par Solution</a></em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production
+                  communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
+                  project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
+                  design</li>
                 <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Wordpress</h4>
-              <h5>Present</h5>
+              <h5>2023 to Present</h5>
               <p><em><a href="https://parsolution.net">Par Solution</a></em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
+                  advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
@@ -476,7 +512,7 @@
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Birthday Video</a></h4>
             <p class="description">Normal effect Video: 100/-</p>
-          </div>        
+          </div>
         </div>
 
       </div>
@@ -513,8 +549,11 @@
                 <p>+91 96385 16334</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.270543696752!2d72.87604979678953!3d21.221117800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04f40f779eaef%3A0x676d85f775539369!2sHARIKUNJ%20SOCIETY!5e0!3m2!1sen!2sin!4v1672837113955!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="width: 100%; height: 290px;"  loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe> 
-              
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.270543696752!2d72.87604979678953!3d21.221117800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04f40f779eaef%3A0x676d85f775539369!2sHARIKUNJ%20SOCIETY!5e0!3m2!1sen!2sin!4v1672837113955!5m2!1sen!2sin"
+                width="600" height="450" frameborder="0" style="width: 100%; height: 290px;" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
+
             </div>
 
           </div>
@@ -567,7 +606,8 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
