--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>harshgheenaiya43@gmail.com</p>
+                <p>hgcreation056@gmail.com</p>
               </div>
 
               <div class="phone">
